/*
 * CDMlib - Cartesian Data Management library
 *
 * Copyright (c) 2013-2014 Advanced Institute for Computational Science, RIKEN.
 * All rights reserved.
 *
 */


REVISION HISTORY
================

------------------
2014-11-18
Edit path setting for coordinate file and add check for coordinates
座標ファイルのパス指定をDFIのディレクトリからの相対パス、もしくは絶対パス
で指定できるようにした。
また、WriteInit時に引数に与える座標配列がアロケートされているかの
チェックや、ReadInit時に座標ファイル内の座標データ数のチェックを加えた。

------------------
2014-11-17
Merge master into branch advance_develop
masterのリビジョン"Add ResultFormat at VisIt section, release 0.6.1"を
ブランチadvance_developにマージした。
Plot3d対応で追加修正した部分を不等間隔格子対応に取り込むため。
その際、競合が発生したファイルが存在したので解決した。
また、Plot3d対応の追加修正において、iblankの設定方法を変更したが、
単にマージしただけでは変更が反映されない部分があったので、
iblankの設定方法の変更に沿って修正を加えた。

------------------
2014-11-10
Add check of file format for non-uniform cartesian
SPH形式とBOV形式は不等間隔格子に対応していないので、これらの形式で
不等間隔格子の入出力を行おうとした場合はエラーを返すようにした。
また、不等間隔格子でproc.dfiファイルを出力する際、座標ファイル
の拡張子がcrdになっているかのチェックも加えた。

------------------
2014-11-04
Add check for reading coordinate file
不等間隔格子で座標ファイルを読み込む際、座標ファイルが読み込めているか
どうか、また拡張子はcrdになっているかのチェックを付け加えた。

------------------
2014-10-30
Apply function overloading to method WriteInit and edit class cdm_NonUniformDomain
API関数WriteInitにオーバーロード機能の適用し、等間隔格子用と不等間隔格子用の
API関数WriteInitを用意した。また、等間隔格子・不等間隔格子の共通処理を
行う部分は、さらにオーバーロード機能を適用したWriteInitを作成した。
この変更に伴い、クラスcdm_NonUniformDomainのコンストラクタ部を編集した。
不等間隔格子の場合の座標データの精度は、クラスcdm_NonUniformDomainの
テンプレートの型で指定するようにした。

------------------
2014-10-26
Minor corrections about coordinatefile information
座標ファイルに関する情報の変数名やコメント文の訂正を行った。

------------------
2014-10-25
Change CoordinateFileFormat to CoordinateFileType
変数CoordinateFileFormatをCoordinateFileTypeに変更した。

------------------
2014-10-25
Merge branch advance_develop_NonUniform into branch advance_develop
ブランチadvance_develop_NonUniformをブランチadvance_developにマージした。
その際、cdm_DFI.h,cdm_DFI.Cは競合が発生したので解決した。
また、
E_CDM_OUTPUT_TYPE-> E_CDM_FILE_TYPE
CompName -> VariName
に変更できていない部分があったので変更した。

------------------