@@ -407,6 +407,7 @@ cdm_DFI* cdm_DFI::WriteInit(const MPI_Comm comm,
                             const T* coord_Z,
                             const std::string coord_file,
                             const CDM::E_CDM_FILE_TYPE coord_filetype,
+                            const CDM::E_CDM_ENDIANTYPE coord_fileEndian,
                             const int division[3],
                             const int head[3],
                             const int tail[3],
@@ -451,6 +452,7 @@ cdm_DFI* cdm_DFI::WriteInit(const MPI_Comm comm,
                                            coord_Z,
                                            coord_file,
                                            coord_filetype,
+                                           coord_fileEndian,
                                            G_size,
                                            division,
                                            GCell);
