@@ -150,6 +150,24 @@ cdm_NonUniformDomain<T>::Read(cdm_TextParser tpCntl,
     }
   }
 
+  //CoordinateFileEndian
+  if ( CoordinateFileType == CDM::E_CDM_FILE_TYPE_BINARY ) {
+    label = "/Domain/CoordinateFileEndian";
+    if ( !(tpCntl.GetValue(label, &str )) )
+    {
+      printf("\tCDM Parsing error : fail to get '%s'\n",label.c_str());
+      return CDM::E_CDM_ERROR_READ_DFI_COORDINATEFILEENDIAN;
+    }
+    if( !strcasecmp(str.c_str(),"little" ) ) {
+      CoordinateFileEndian=CDM::E_CDM_LITTLE;
+    } else if( !strcasecmp(str.c_str(),"big" ) ) {
+      CoordinateFileEndian=CDM::E_CDM_BIG;
+    } else {
+      printf("\tCDM Parsing error : fail to get '%s'\n",label.c_str());
+      return CDM::E_CDM_ERROR_READ_DFI_COORDINATEFILEENDIAN;
+    }
+  }
+
   //Read CoordinateFile
   FILE* fp;
   std::string crdfile;
@@ -263,82 +281,138 @@ cdm_NonUniformDomain<T>::Read_CoordinateFile(FILE* fp)
   //binary
   } else {
 
-    size_t nread=0;
+    /** Endian セット */
+    int idumy = 1;
+    char* cdumy = (char*)(&idumy);
+    CDM::E_CDM_ENDIANTYPE Endian=CDM::E_CDM_ENDIANTYPE_UNKNOWN;
+    if( cdumy[0] == 0x01 ) Endian = CDM::E_CDM_LITTLE;
+    if( cdumy[0] == 0x00 ) Endian = CDM::E_CDM_BIG;
+
+    bool matchEndian = true;
+    if( Endian != CoordinateFileEndian ) matchEndian = false;
+
+    size_t nread_sum = 0;
+    size_t nread = 0;
+    int xdataCount;
+    int ydataCount;
+    int zdataCount;
+    CDM::E_CDM_ERRORCODE tmpRes;
 
     //x
-    nread += fread(&szGrid[0], sizeof(int), 1, fp);
-    //GlobalVoxelの確認
-    if ( szGrid[0] != GlobalVoxel[0]+1 ) {
-      printf("\tError in Read CoordinateFile: Number of grid in X direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+    tmpRes = readCoordDataCount(fp, matchEndian, GlobalVoxel[0], &xdataCount, &nread);
+    if( tmpRes != CDM::E_CDM_SUCCESS ) {
+      return tmpRes;
     }
+    nread_sum += nread;
     if( XCoordinates ){ delete[] XCoordinates; }
-    XCoordinates = new T[szGrid[0]];
-    nread += fread(XCoordinates, sizeof(T), szGrid[0], fp);
-
-    //GlobalOriginとGlobalRegionの確認
-    if ( fabs(XCoordinates[0]-GlobalOrigin[0]) > eps) {
-      printf("\tError in Read CoordinateFile: Origin in X direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+    XCoordinates = new T[xdataCount];
+    tmpRes = readCoordData(fp, matchEndian, &xdataCount, GlobalOrigin[0], GlobalRegion[0], XCoordinates, &nread);
+    if( tmpRes != CDM::E_CDM_SUCCESS) {
+      return tmpRes;
     }
-    reg_Coord = XCoordinates[szGrid[0]-1]-XCoordinates[0];
-    if ( fabs(reg_Coord-GlobalRegion[0]) > eps) {
-      printf("\tError in Read CoordinateFile: Region in X direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
-    }
+    nread_sum += nread;
 
     //y
-    nread += fread(&szGrid[1], sizeof(int), 1, fp);
-    //GlobalVoxelの確認
-    if ( szGrid[1] != GlobalVoxel[1]+1 ) {
-      printf("\tError in Read CoordinateFile: Number of grid in Y direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+    tmpRes = readCoordDataCount(fp, matchEndian, GlobalVoxel[1], &ydataCount, &nread);
+    if( tmpRes != CDM::E_CDM_SUCCESS ) {
+        return tmpRes;
     }
+    nread_sum += nread;
     if( YCoordinates ){ delete[] YCoordinates; }
-    YCoordinates = new T[szGrid[1]];
-    nread += fread(YCoordinates, sizeof(T), szGrid[1], fp);
-
-    //GlobalOriginとGlobalRegionの確認
-    if ( fabs(YCoordinates[0]-GlobalOrigin[1]) > eps) {
-      printf("\tError in Read CoordinateFile: Origin in Y direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+    YCoordinates = new T[ydataCount];
+    tmpRes = readCoordData(fp, matchEndian, &ydataCount, GlobalOrigin[1], GlobalRegion[1], YCoordinates, &nread);
+    if( tmpRes != CDM::E_CDM_SUCCESS ) {
+        return tmpRes;
     }
-    reg_Coord = YCoordinates[szGrid[1]-1]-YCoordinates[0];
-    if ( fabs(reg_Coord-GlobalRegion[1]) > eps) {
-      printf("\tError in Read CoordinateFile: Region in Y direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
-    }
+    nread_sum += nread;
 
     //z
-    nread += fread(&szGrid[2], sizeof(int), 1, fp);
-    //GlobalVoxelの確認
-    if ( szGrid[2] != GlobalVoxel[2]+1 ) {
-      printf("\tError in Read CoordinateFile: Number of grid in Z direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+    tmpRes = readCoordDataCount(fp, matchEndian, GlobalVoxel[2], &zdataCount, &nread);
+    if( tmpRes != CDM::E_CDM_SUCCESS ) {
+        return tmpRes;
     }
+    nread_sum += nread;
     if( ZCoordinates ){ delete[] ZCoordinates; }
-    ZCoordinates = new T[szGrid[2]];
-    nread += fread(ZCoordinates, sizeof(T), szGrid[2], fp);
-
-    //GlobalOriginとGlobalRegionの確認
-    if ( fabs(ZCoordinates[0]-GlobalOrigin[2]) > eps) {
-      printf("\tError in Read CoordinateFile: Origin in Z direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+    ZCoordinates = new T[zdataCount];
+    tmpRes = readCoordData(fp, matchEndian, &zdataCount, GlobalOrigin[2], GlobalRegion[2], ZCoordinates, &nread);
+    if( tmpRes != CDM::E_CDM_SUCCESS ) {
+        return tmpRes;
     }
-    reg_Coord = ZCoordinates[szGrid[2]-1]-ZCoordinates[0];
-    if ( fabs(reg_Coord-GlobalRegion[2]) > eps) {
-      printf("\tError in Read CoordinateFile: Region in Z direction\n");
-      return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
-    }
+    nread_sum += nread;
 
-    //Check of number of coordinates
-    if ( nread != (szGrid[0]+szGrid[1]+szGrid[2]+3) ) {
-      printf("\tError in Read CoordinateFile: Num of coordinates\n");
+    //CoordinatesFileから読み込んだデータ数のチェック
+    if ( nread_sum != (xdataCount+ydataCount+zdataCount+3) ) {
+      printf("\tError in Read CoordinateFile: Num of CoordinatesFile data\n");
       return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
     }
   }
 
   return CDM::E_CDM_SUCCESS;
+}
+
+// #################################################################
+// CoordinateFileの各方向の座標データ数を読込む関数
+template<typename T>
+CDM_INLINE
+CDM::E_CDM_ERRORCODE 
+cdm_NonUniformDomain<T>::readCoordDataCount(FILE* fp,
+                                            bool matchEndian,
+                                            int globalVoxel,
+                                            int* dataCount,
+                                            size_t* nread)
+{
+
+  *nread = fread(dataCount, sizeof(int), 1, fp);
+  if( !matchEndian ) BSWAPVEC(dataCount,1);
+
+  //GlobalVoxelの確認
+  if ( dataCount[0] != globalVoxel+1 ) {
+    printf("\tError in Read CoordinateFile: Number of grid in X direction\n");
+    return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+  }
+
+  return CDM::E_CDM_SUCCESS;
+
+}
+
+// #################################################################
+// CoordinateFileの各方向の座標データを読込む関数
+template<typename T>
+CDM_INLINE
+CDM::E_CDM_ERRORCODE
+cdm_NonUniformDomain<T>::readCoordData(FILE* fp,
+                                       bool matchEndian,
+                                       int* dataCount,
+                                       double globalOrigin,
+                                       double globalRegion,
+                                       T* coordinates,
+                                       size_t* nread)
+{
+
+  *nread = fread(coordinates, sizeof(T), dataCount[0], fp);
+  if( !matchEndian ) {
+    if( typeid(T) == typeid(float) ){
+      BSWAPVEC(coordinates, (size_t)dataCount[0]);
+    } else if( typeid(T) == typeid(double) ) {
+      DBSWAPVEC(coordinates, (size_t)dataCount[0]);
+    }
+  }
+
+  //GlobalOriginとGlobalRegionの確認
+  double eps = 1e-10;
+  if ( fabs(coordinates[0]-globalOrigin) > eps) {
+    printf("\tError in Read CoordinateFile: Origin in X direction\n");
+    cout << globalOrigin << endl;
+    return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+  }
+  double reg_Coord = coordinates[dataCount[0]-1]-coordinates[0];
+  if ( fabs(reg_Coord-globalRegion) > eps) {
+    printf("\tError in Read CoordinateFile: Region in X direction\n");
+    return CDM::E_CDM_ERROR_READ_COORDINATEFILE;
+  }
+
+  return CDM::E_CDM_SUCCESS;
+
 }
 
 // #################################################################
@@ -393,6 +467,12 @@ cdm_NonUniformDomain<T>::Write(FILE* fp,
   std::string Dtype = cdm_DFI::ConvDatatypeE2S((CDM::E_CDM_DTYPE)CoordinateFilePrecision);
   fprintf(fp, "CoordinateFilePrecision = \"%s\"\n",Dtype.c_str());
 
+  _CDM_WRITE_TAB(fp, tab+1);
+  if(        CoordinateFileEndian == CDM::E_CDM_LITTLE ) {
+    fprintf(fp, "CoordinateFileEndian = \"little\"\n");
+  } else if( CoordinateFileEndian == CDM::E_CDM_BIG ) {
+    fprintf(fp, "CoordinateFileEndian = \"big\"\n");
+  }
 
   fprintf(fp, "\n");
   fprintf(fp, "}\n");
